fix sizing of plus button on mobile view

--- a/frontend/src/components/Buttons/PlusButton.module.css
+++ b/frontend/src/components/Buttons/PlusButton.module.css
@@ -5,7 +5,7 @@
   width: 2rem;
   height: 2rem;
   background-color: #fff;
-  margin-right: 1rem;
+  margin-right: 0.5rem;
   font-size: 1.4rem;
   font-weight: 700;
   line-height: 0;
@@ -17,11 +17,11 @@
   align-items: center;
 }
 
-img {
+.plus img {
   width: 0.625rem;
   height: 0.625rem;
 }
 
 .btnPlus {
-  padding: 0.5rem 0.9375rem 0.5rem 0.5rem;
+  padding: 0.375rem 0.825rem 0.375rem 0.5rem;
 }
